feat: remove unnecessary api
