# handler/registration.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"errors"
-	"fmt"
 	"github.com/SawitProRecruitment/UserService/repository"
 	"golang.org/x/crypto/bcrypt"
 	"net/http"
@@ -11,14 +10,6 @@ import (
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/labstack/echo/v4"
 )
-
-// This is just a test endpoint to get you started. Please delete this endpoint.
-// (GET /hello)
-func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
-	var resp generated.HelloResponse
-	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
-	return ctx.JSON(http.StatusOK, resp)
-}
 
 func (s *Server) RegisterUser(ctx echo.Context) error {
 	var req generated.RegistrationRequest
